<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="34dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />


    <TextView
        android:id="@+id/genreselectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center|bottom"
        android:text="@string/genreSelect"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@id/chipHolder">

    </TextView>

    <LinearLayout
        android:id="@+id/chipHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/genreselectText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup2"
            android:layout_marginTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center">

            <com.google.android.material.chip.Chip
                android:id="@+id/genre0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre1_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre2_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre3_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre4_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre5_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre6_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre7_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre8_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre9_name">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/genre9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openGenrePage"
                android:text="@string/genre10_name">

            </com.google.android.material.chip.Chip>

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>